# tarot-tool

./: .gitignore  CLAUDE.md  Example.md  GEMINI.md  README.md  SKILL.md  User.md  pyproject.toml  tarot_tool.toml
tarot_tool/: __init__.py  cli.py  server.py  tool.py
tarot_tool/cards/: __init__.py  deck.py  major_arcana.py  meanings.py  minor_arcana.py
tarot_tool/engine/: __init__.py  context_builder.py  rng.py  shuffle.py
tarot_tool/models/: __init__.py  card.py  reading.py  spread.py
tarot_tool/spreads/: __init__.py  celtic_cross.py  chakra.py  custom.py  decision.py  horseshoe.py  registry.py  relationship.py  single.py  three_card.py  year_ahead.py
tarot_tool/tests/: __init__.py  test_cli.py  test_context.py  test_deck.py  test_handlers.py  test_rng.py  test_spreads.py
tarot_tool/tools/: __init__.py  draw_cards.py  get_meaning.py  list_spreads.py  read_spread.py
