[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarot-tool"
version = "0.1.0"
description = "Production-grade tarot card tool system for OpenClaw MCP integration"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.0",
]
openclaw = [
    "openclaw-sdk>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tarot_tool/tests"]
addopts = "--cov=tarot_tool --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[project.scripts]
tarot-tool = "tarot_tool.server:main"
tarot = "tarot_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tarot_tool"]
